[package]
name = "axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = {version = "0.7", features = ["http2","macros"]}

serde = { version = "1", features = ["derive"] }
serde_json = "1"

lazy-regex = "2"

tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.10"
serde_with = "2"
async-trait = "0.1"

strum_macros = "0.25"

anyhow = "1"
uuid = {version = "1", features = ["v4","fast-rng",]}

[dev-dependencies]

httpc-test = "0.1.10"
