[workspace]

members = [
    "json-file", "working_with_json_file", "working_with_text_file",
]
resolver = "2"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

# [dependencies]
# reqwest = { workspace = true, features = ["json"], optional = true }
